--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
     <body>
         <h2 id="clock">00:00:00</h2>
+        <div class="weather">
+            <span>asd</span>
+            <span></span>
+        </div>
         <div>
             <div>
                 <form id="login-form" class="hiden">
@@ -38,5 +42,6 @@
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
         <script src="js/toDoList.js"></script>
+        <script src="js/weather.js"></script>
     </body>
 </html>
